fixed display bug in product page

--- a/style.css
+++ b/style.css
@@ -579,3 +579,12 @@ sup {
   opacity: 80%;
   border: 2px solid black;
 }
+
+.color-options {
+  max-width: 90px;
+}
+
+.select-color {
+  display: flex;
+  flex-direction: row;
+}
